# localstack-lambda-demo

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
lambda/: hello_world.py
