[tool.poetry]
name = "localstack-lambda-demo"
version = "0.1.0"
description = ""
authors = ["satoryo <ryo.sato@sportip.jp>"]
readme = "README.md"
packages = [{include = "localstack_lambda_demo"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
boto3 = "^1.26.34"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

